[project]
name = "AI_CHATBOT"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "langchain>=1.1.3",
    "langchain-core>=1.2.0",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.38.0",
]
